feat : 에러 코드 리팩토링 및 domain 기반으로 패키지 재구성