@@ -1,6 +1,6 @@
 package com.nhnacademy.bookstoreuserapi.repository.queryfactory;
 
-import com.nhnacademy.bookstoreuserapi.domain.entity.QCart;
+import com.nhnacademy.bookstoreuserapi.cart.domain.QCart;
 import com.nhnacademy.bookstoreuserapi.cart.domain.ResponseCart;
 import com.nhnacademy.bookstoreuserapi.cart.repository.queryfactory.impl.CartRepositoryImpl;
 import com.querydsl.core.types.Projections;
@@ -64,7 +64,7 @@ class CartRepositoryTest {
 
         assertThat(result).hasSize(1);
         assertThat(result.getTotalElements()).isEqualTo(1);
-        assertThat(result.getContent().get(0).getUserId()).isEqualTo(userId);
+        assertThat(result.getContent().getFirst().getUserId()).isEqualTo(userId);
     }
 
     @Test
